backend/nohup.out
nohup: ignoring input
Traceback (most recent call last):
  File "/usr/lib/python3.10/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.10/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/__main__.py", line 4, in <module>
    uvicorn.main()
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/click/core.py", line 1514, in __call__
    return self.main(*args, **kwargs)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/click/core.py", line 1435, in main
    rv = self.invoke(ctx)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/click/core.py", line 1298, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/click/core.py", line 853, in invoke
    return callback(*args, **kwargs)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/main.py", line 441, in main
    run(
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/main.py", line 617, in run
    server.run()
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/server.py", line 75, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/_compat.py", line 60, in asyncio_run
    return loop.run_until_complete(main)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/server.py", line 79, in serve
    await self._serve(sockets)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/server.py", line 86, in _serve
    config.load()
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/config.py", line 449, in load
    self.loaded_app = import_from_string(self.app)
  File "/var/www/sociomee/backend/venv/lib/python3.10/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/var/www/sociomee/backend/app.py", line 21
    try:
    ^^^
SyntaxError: expected 'except' or 'finally' block
